WIP: Alterar metodo de verificação jwt.
