# storage/api-docs/api-docs.json
@@ -23,12 +23,7 @@
                             }
                         }
                     }
-                },
-                "security": [
-                    {
-                        "bearerAuth": []
-                    }
-                ]
+                }
             }
         },
         "/api/employee": {
